feat: add dashboard controller
