# app/Http/Controllers/DashboardController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Models\ProgramDesa;
 use Illuminate\Http\Request;
+use Carbon\Carbon;
 
 class DashboardController extends Controller
 {
@@ -39,5 +40,33 @@ class DashboardController extends Controller
             'ongoingPrograms' => $ongoingPrograms,
             'completedPrograms' => $completedPrograms,
         ]]);
+    }
+
+    /**
+     * @OA\Get(
+     *   path="/api/dashboard/anggaran",
+     *   operationId="anggaran",
+     *   tags={"Dashboard"},
+     *   summary="Get the total anggaran for each month in the current year.",
+     *   @OA\Response(
+     *     response="200",
+     *     description="Dashboard record retrieved successfully"
+     *   )
+     * )
+     */
+    public function monthlyAnggaran()
+    {
+        $now = Carbon::now();
+        $startOfYear = $now->startOfYear();
+        $endOfYear = $now->endOfYear();
+
+        $monthlyAnggaran = ProgramDesa::whereBetween('tanggal_mulai', [$startOfYear, $endOfYear])
+            ->selectRaw('MONTH(tanggal_mulai) as month, SUM(anggaran) as total_anggaran')
+            ->groupBy('month')
+            ->orderBy('month')
+            ->get();
+
+
+        return response()->json(['data' => $monthlyAnggaran]);
     }
 }
